# diffusion-co-design

./: .gitignore  .gitmodules  Dockerfile  README.md  docker_run.sh  pixi.toml  pyproject.toml
diffusion-co-design/: __init__.py
diffusion-co-design/co-design/: train_mappo.py
diffusion-co-design/diffusion/datasets/rware/: generate.py  transform.py
diffusion_co_design/co_design/: train_mappo.py
diffusion_co_design/co_design/rware/: design.py  env.py  model.py
diffusion_co_design/co_design/scripts/: train_rware.py
diffusion_co_design/co_design/scripts/configs/: testing.yaml
diffusion_co_design/common/: __init__.py  constants.py  design.py  device.py  env.py  logging.py  misc.py  nn.py  ppo.py  pydra.py
diffusion_co_design/common/design/: __init__.py  base.py  design.py  diffusion.py  generate.py
diffusion_co_design/common/nn/: __init__.py  base.py  geometric.py
diffusion_co_design/common/rl/: util.py
diffusion_co_design/common/rl/mappo/: __init__.py  schema.py  trainer.py
diffusion_co_design/diffusion/: generator.py
diffusion_co_design/diffusion/datasets/rware/: .gitignore  generate.py  pretrain.py  transform.py
diffusion_co_design/pretrain/datasets/rware/: transform.py
diffusion_co_design/pretrain/rware/: generate.py  generator.py  graph.py  pretrain.py  pretrain_flat.py  pretrain_image.py  transform.py
diffusion_co_design/pretrain/rware/configs/: README.md  default.yaml  rware_16_50_5_4_corners.yaml  rware_16_50_5_5_random.yaml
diffusion_co_design/rware/: classifier.py  design.py  env.py  model.py  schema.py  static.py
diffusion_co_design/rware/diffusion/: generate.py  generator.py  transform.py
diffusion_co_design/rware/model/: classifier.py  diffusion.py  graph.py  nn.py  rl.py  shared.py
diffusion_co_design/utils/: __init__.py  constants.py  logging.py  misc.py  pydra.py
diffusion_co_design/vmas/: design.py  env.py  model.py  schema.py  static.py
diffusion_co_design/vmas/diffusion/: generate.py  generator.py
diffusion_co_design/vmas/model/: classifier.py  diffusion.py  rl.py  shared.py
diffusion_co_design/vmas/scenario/: env.py  obstacle_navigation.py
diffusion_co_design/wfcrl/: design.py  env.py  model.py  schema.py  static.py
diffusion_co_design/wfcrl/diffusion/: constraints.py  generate.py  generator.py
diffusion_co_design/wfcrl/model/: __init__.py  classifier.py  diffusion.py  rl.py
diffusion_co_design/wfcrl/model/segnn/: __init__.py  balanced_irreps.py  segnn.py
experiments/diffusion_playground/: classifier.py  dataset.py  notebook.ipynb  pyproject.toml  train_classifier.py
experiments/diffusion_playground/conf/: config.yaml  schema.py
experiments/diffusion_playground/conf/model/: gnn.yaml  mlp.yaml  unet_cnn.yaml
experiments/train_rware/: .gitignore  headless.sh  main.py  pyproject.toml
experiments/train_rware/conf/: add_ablation.yaml  default.yaml  descent.yaml  diffusion_gnn_distill.yaml  diffusion_image.yaml  diffusion_image_distill.yaml  diffusion_image_distill_hint.yaml  diffusion_image_distill_synthetic.yaml  fixed.yaml  new_critic.yaml  old_critic.yaml  random.yaml  replay.yaml  rl.yaml  sampling.yaml  test.yaml  test_dicode.yaml
experiments/train_rware/conf/designer/: fixed.yaml  (+12 more)
experiments/train_rware_classifier/: dataset.py  main.py  notebook.ipynb  pyproject.toml  train_classifier.py
experiments/train_rware_classifier/conf/: config.yaml  lr.yaml  schema.py
experiments/train_rware_diffusion/: pyproject.toml  setup_scenario.py  train_diffusion.py
experiments/train_rware_diffusion/conf/: rware_16_50_5_4_corners.yaml  rware_16_50_5_5_random.yaml
experiments/train_vmas/: .gitignore  headless.sh  main.py  pyproject.toml  sweep.sh
experiments/train_vmas/conf/: diffusion.yaml  diffusion_distill.yaml  diffusion_duplicate.yaml  fixed.yaml  random.yaml  reinforce.yaml  test.yaml  test_dicode.yaml
experiments/train_vmas_classifier/: notebook.ipynb  pyproject.toml
experiments/train_vmas_diffusion/: pyproject.toml  setup_scenario.py  train_diffusion.py
experiments/train_vmas_diffusion/conf/: obstacle_navigation_1.yaml  obstacle_navigation_2.yaml  obstacle_navigation_3.yaml
experiments/train_wfcrl/: main.py  main.sh  normalisation_statistics.py  notebook.ipynb  pyproject.toml  sweep.sh
experiments/train_wfcrl/conf/: default.yaml  diffusion.yaml  diffusion_distill.yaml  diffusion_distill_synthetic.yaml  fixed.yaml  manual.yaml  random.yaml  reinforce.yaml  replay.yaml  sampling.yaml  test.yaml  test_dicode.yaml  test_diffusion_distill.yaml
experiments/train_wfcrl_classifier/: dataset.py  main.py  notebook.ipynb  pyproject.toml
experiments/train_wfcrl_classifier/conf/: config.yaml  schema.py
experiments/train_wfcrl_diffusion/: .gitignore  notebook.ipynb  pyproject.toml  setup_scenario.py  train_diffusion.py
experiments/train_wfcrl_diffusion/conf/: wfcrl_10.yaml  wfcrl_2.yaml  wfcrl_30.yaml  wfcrl_4.yaml  wfcrl_8.yaml  wfcrl_rect_8.yaml
experiments/wfcrl/: pyproject.toml
experiments/wfcrl_playground/: main.py  notebook.ipynb
notebooks/: .gitignore  diffusion_visualisation.ipynb  figures.ipynb  generate_visualisation.ipynb  graph_diffusion.ipynb  train_visualisation.ipynb
scripts/: clear_failed_experiments.py  docker_run.sh  headless_train_rware.sh  list_checkpoints.py  scp_checkpoints.py  submit.wilkes3  sync.sh  sync_dcd_setup.py  test.sh  util.py
tests/vmas/: test_nn_vmas.py
tests/wfcrl/: test_nn_wfcrl.py
(+21 files in other folders)
