[project]
name = "diffusion-co-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "rware[pettingzoo, dev]",
    "guided-diffusion",
    "torchrl>=0.7.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "moviepy==1.0.3", # Temp pin as until wandb updates
    "wandb[media]>=0.19.5",
    "hydra-core>=1.3.2",
    "pydantic>=2.10.6",
    "diffusers[torch]>=0.32.2",
    "torch-geometric>=2.6.1",
    # Manually install torch_scatter and torch_cluster
    # uv pip install torch-scatter torch-cluster --no-build-isolation
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "expecttest>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [".", "packages/*", "experiments/*"]

[tool.uv.sources]
diffusion_co_design = { workspace = true }
rware = { workspace = true }
guided_diffusion = { workspace = true }
